--- a/JS30_proj_1/css/style.css
+++ b/JS30_proj_1/css/style.css
@@ -15,7 +15,7 @@
 html {
     font-size: 10px;
     /* background: url('./background.jpg') bottom center; */
-    background: url("assets/farm.jpeg"); /* Image from freepik */
+    background: url('assets/farm.jpeg'); /* Image from freepik */
     background-size: cover;
   }
   
