--- a/JS30_proj_1/css/style.css
+++ b/JS30_proj_1/css/style.css
@@ -71,27 +71,27 @@ kbd {
 }
   
 #rooster {
-    background-image: url();
+    background-image: url(assets/rooster.png);
     background-size: cover;
 }
   
 #bunny {
-    background-image: url("assets/bunny.jpg");
+    background-image: url(./assets/bunny.jpg);
     background-size: cover;
 }
 
 #cow {
-    background-image: url("assets/cow.jpg");
+    background-image: url(/assets/cow.jpg);
     background-size: cover;
 }
 
 #pig {
-    background-image: url("assets/pig.jpeg");
+    background-image: url('assets/pig.jpeg');
     background-size: cover;
 }
 
 #sheep {
-    background-image: url("assets/sheep.png");
+    background-image: url(assets/sheep.png);
     background-size: cover;
 }
 
