--- a/JS30_proj_1/css/style.css
+++ b/JS30_proj_1/css/style.css
@@ -71,7 +71,7 @@ kbd {
 }
   
 #rooster {
-    background-image: url(assets/rooster.png);
+    background-image: url(rooster.png);
     background-size: cover;
 }
   
